# FreeFoodDropDonorDesktop

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ffdddapplication.c  ffdddapplication.h  ffdddgiveaway.c  ffdddgiveaway.h  ffdddgiveawaydialog.c  ffdddgiveawaydialog.h  ffdddwindow.c  ffdddwindow.h  main.c  networking.c  networking.h
src/res/ui/: ffddd.gresource.xml  giveawaydialog.ui  mainwindow.ui
